권한 관리 모듈 패치